# ANIME-RECOMMENDER-SYSTEM-LLMOPS

./: .gitignore  GITHUB LINK TO PROJECT.txt  main.py  pyproject.toml  requirements.txt
data/: anime_updated.csv
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
